Fixes #27: Add note button should not shift when changing category

--- a/src/app/components/collection/collection.component.scss
+++ b/src/app/components/collection/collection.component.scss
@@ -105,3 +105,12 @@
   background-color: #fff;
   width: calc(100% - 351px);
 }
+
+.note-buttons {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+}
