--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -8,19 +8,9 @@
   width: 100%;
 }
 
-.notes-buttons {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-}
-
 .notes-list {
   width: 100%;
   height: 100%;
-  z-index: 0;
   overflow: auto;
 }
 
